--- a/style.css
+++ b/style.css
@@ -1,26 +1,17 @@
 html {
     position: relative;
 }
+
 body {
     margin-bottom: 250px;
 }
-/* footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex-bottom;
-    justify-content: center;
-    align-items: center;
-} */
+
 nav {
     position: fixed;
     top: 0;
     width: 100%;
 }
-#background {
-    background: black;
-    /* overflow: hidden; */
-}
+
 .overlay-text {
     position: absolute;
     top: 50%;
@@ -31,14 +22,17 @@ nav {
     color: #fff;
     text-shadow: 1px 1px #000;
 }
+
 .overlay-text h1 {
     font-size: 8vw;
     margin-bottom: 0;
 }
+
 .jumbotron.jumbotron-sm {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
 .jumbotron h1.display-4 {
     font-size: 2.5rem;
     margin-top: 10px;
@@ -101,15 +95,33 @@ hr {
     align-items: center;
     color: #555;
     font-weight: bold;
-  }
+}
 
-  .list-group-item {
+.list-group-item {
     font-size: 1.25rem;
     font-weight: 500;
-  }
+}
 
-  .modal-dialog.modal-dialog-centered {
+.modal-dialog.modal-dialog-centered {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.dropdown-menu-dark {
+    background-color: #4f5964;
+}
+
+.dropdown-menu-dark .dropdown-item {
+    color: #b8b8b8;
+}
+
+.dropdown-menu-dark .dropdown-item {
+    color: #b8b8b8;
+}
+
+.dropdown-menu-dark .dropdown-item:hover,
+.dropdown-menu-dark .dropdown-item:focus {
+    color: #f5f5f5;
+    background-color: #4f5964;
 }
