--- a/style.css
+++ b/style.css
@@ -6,10 +6,57 @@ body {
     margin-bottom: 250px;
 }
 
-nav {
-    position: fixed;
-    top: 0;
+.navbar {
+    margin: 17px;
+    border-radius: 8px;
+    background: rgba(56, 63, 69, 0.95) !important;
+    backdrop-filter: blur(10px) !important;
+    transition: background 0.2s ease;
+    z-index: 9999;
+}
+
+.navbar:hover {
+    background: rgba(56, 63, 69, 1) !important;
+}
+
+.nav-link {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.navbar .nav-link.dropdown-toggle {
+    outline: none;
+    /* Remove the outline */
+    -webkit-tap-highlight-color: transparent;
+    /* Disable tap highlighting on mobile */
+}
+
+.navbar .nav-link.dropdown-toggle:hover {
+    /* Add any hover styles as needed */
+}
+
+.nav-link.active {
+    background-color: rgb(56, 63, 69);
+    color: white;
+    border-radius: 10px;
+    margin-bottom: 5px;
     width: 100%;
+    padding-left: 20px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.nav-link.inactive {
+    background-color: rgb(236, 236, 236);
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+    margin-bottom: 5px;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.nav-link.inactive:hover {
+    background-color: rgb(214, 214, 214);
 }
 
 .overlay-text {
@@ -37,26 +84,6 @@ nav {
     font-size: 2.5rem;
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-.nav-link.active {
-    background-color: rgb(56, 63, 69);
-    color: white;
-    border-radius: 10px;
-    margin-bottom: 5px;
-    width: 100%;
-    padding-left: 20px;
-}
-
-.nav-link.inactive {
-    background-color: rgb(236, 236, 236);
-    color: rgb(0, 0, 0);
-    border-radius: 10px;
-    margin-bottom: 5px;
-}
-
-.nav-link.inactive:hover {
-    background-color: rgb(214, 214, 214);
 }
 
 hr {
@@ -109,6 +136,45 @@ hr {
 }
 
 .dropdown-menu-dark {
+    background-color: rgb(43, 48, 53);
+    border-radius: 8px;
+    padding: 10px;
+    margin: 2px;
+    margin-top: 12px;
+}
+
+.dropdown-menu-dark .dropdown-item {
+    color: #b8b8b8;
+    font-size: 18px;
+    font-weight: 500;
+    align-self: center;
+}
+
+.dropdown-menu-dark .dropdown-item:hover,
+.dropdown-menu-dark .dropdown-item:focus {
+    color: #f5f5f5;
+    background-color: rgb(51, 57, 63);
+    border-radius: 8px;
+}
+
+.dropdown-menu-centered {
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    position: relative;
+}
+
+.dropdown-menu-centered::before {
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent rgb(43, 48, 53) transparent;
+}
+
+/* .dropdown-menu-dark {
     background-color: #4f5964;
 }
 
@@ -124,4 +190,4 @@ hr {
 .dropdown-menu-dark .dropdown-item:focus {
     color: #f5f5f5;
     background-color: #4f5964;
-}
+} */
