--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    margin-bottom: 250px;
+    /* margin-bottom: 250px; */
 }
 
 .navbar {
@@ -174,20 +174,12 @@ hr {
     border-color: transparent transparent rgb(43, 48, 53) transparent;
 }
 
-/* .dropdown-menu-dark {
-    background-color: #4f5964;
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
 }
 
-.dropdown-menu-dark .dropdown-item {
-    color: #b8b8b8;
+.sticky-footer {
+    margin-top: auto;
 }
-
-.dropdown-menu-dark .dropdown-item {
-    color: #b8b8b8;
-}
-
-.dropdown-menu-dark .dropdown-item:hover,
-.dropdown-menu-dark .dropdown-item:focus {
-    color: #f5f5f5;
-    background-color: #4f5964;
-} */
