--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
     /* margin-bottom: 250px; */
+    overflow-x: hidden;
 }
 
 .navbar {
@@ -182,4 +183,46 @@ hr {
 
 .sticky-footer {
     margin-top: auto;
+}
+
+.overflow-visible {
+    overflow: visible;
+    padding: 0;
+}
+
+.background {
+    position: relative;
+    overflow: hidden;
+    transform: rotate(-5deg);
+}
+
+.fade-top {
+    position: relative;
+    mask-image: linear-gradient(to top, transparent, black);
+    -webkit-mask-image: linear-gradient(to top, transparent, black);
+}
+
+.background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+    pointer-events: none;
+}
+
+.img-fluid {
+    width: 200%;
+    height: auto;
+    max-width: none;
+}
+
+.text-decoration-none {
+    color: black;
+}
+
+.text-decoration-none:hover {
+    color: black;
 }
