--- a/style.css
+++ b/style.css
@@ -226,3 +226,16 @@ hr {
 .text-decoration-none:hover {
     color: black;
 }
+
+.sidebar-custom {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 858px;
+    box-shadow: 0.1px 0.1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.fixed-top {
+    margin-left: 22px; 
+}
+
+/* 15 + 3 = 18 */
