--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ hr {
 }
 
 .fixed-top {
-    margin-left: 22px; 
+    margin-left: 22px;
 }
 
 .documentation-body {
@@ -254,4 +254,8 @@ hr {
 .table-documentation {
     background-color: rgba(255, 255, 255, 0.85);
     backdrop-filter: blur(10px);
+}
+
+.text-white-shadow {
+    text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.5), 1px -1px 0 rgba(255, 255, 255, 0.5), -1px 1px 0 rgba(255, 255, 255, 0.5), 1px 1px 0 rgba(255, 255, 255, 0.5);
 }
