--- a/style.css
+++ b/style.css
@@ -177,6 +177,32 @@ hr {
     border-color: transparent transparent rgb(43, 48, 53) transparent;
 }
 
+.dropdown-item-content {
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-item-image {
+    height: 50px;
+    margin-right: 10px;
+    margin-left: -15px;
+}
+
+.dropdown-item-text {
+    color: #b8b8b8;
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.dropdown-item-subtext {
+    font-size: 12px;
+    color: #999;
+}
+
 .content-wrapper {
     display: flex;
     flex-direction: column;
