--- a/style.css
+++ b/style.css
@@ -294,17 +294,39 @@ hr {
 }
 
 .card-header-custom {
-    background-color: #ffffff;
+    /* background-color: rgba(56, 63, 69, 1);
+    color: white; */
 }
 
 .card-body-custom {
     background-color: #ffffff;
+    padding: 0.5rem;
+    padding-bottom: 1.5rem;
+    position: relative;
 }
 
 .card-custom {
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     border-radius: 3px;
     box-shadow: 0 0 10px #969696;
+    position: relative;
+}
+
+.card img {
+    max-width: 100%;
+    height: auto;
+}
+
+.btn-custom {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    /* padding: 10px; */
+    background-color: transparent;
+    border: none;
 }
 
 .plugin-section {
@@ -315,7 +337,7 @@ hr {
     background-size: cover;
     background-attachment: fixed;
     box-shadow: 0px 0px 20px 0px #00000063;
-    
+
 }
 
 .game-section {
@@ -332,7 +354,7 @@ hr {
     font-size: 40px;
     font-weight: 700;
     /* color: rgb(255, 255, 255); */
-    text-shadow:rgb(0, 0, 0) 1px 0 3px;
+    text-shadow: rgb(0, 0, 0) 1px 0 3px;
     padding-bottom: 20px;
     padding-top: 20px;
 }
