--- a/style.css
+++ b/style.css
@@ -380,3 +380,10 @@ hr {
     background-size: cover;
     background-attachment: fixed;
 }
+
+.slogan {
+    margin-top: -35px;
+    font-size: 20px;
+    font-weight: 400;
+    text-shadow: rgb(0, 0, 0) 1px 0 1px;
+}
