--- a/style.css
+++ b/style.css
@@ -121,6 +121,52 @@ hr {
     z-index: 2;
 }
 
+.badge-alert {
+    position: absolute;
+    top: -12px;
+    left: -5px;
+    background-color: white;
+    /* box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.2); */
+    width: 50px;
+    height: 24px;
+    display: flex;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    z-index: 2;
+    background: #ff6000;
+}
+
+.badge-alert::before,
+.badge-alert::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 0;
+}
+
+.badge-alert::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -12px;
+    width: 0;
+    height: 0;
+    border-top: 12px solid #ff6000;
+    border-bottom: 12px solid #ff6000;
+    border-left: 12px solid transparent;
+  }
+
+.badge-alert::after {
+  border-top: 12px solid transparent;
+  border-bottom: 12px solid transparent;
+  border-left: 12px solid #ff6000;
+  right: -12px;
+}
+
 .list-group-item {
     font-size: 1.25rem;
     font-weight: 500;
@@ -395,4 +441,29 @@ hr {
     font-size: 20px;
     font-weight: 400;
     text-shadow: rgb(0, 0, 0) 1px 0 1px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+    cursor: default;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    /* border-radius: 6px; */
+}
+
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    /* background: #4f4f4f; */
+    background: rgba(56, 63, 69, 0.95);
+    /* border-radius: 2px; */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #444;
 }
