--- a/style.css
+++ b/style.css
@@ -414,7 +414,6 @@ hr {
 .section-header {
     font-size: 40px;
     font-weight: 700;
-    /* color: rgb(255, 255, 255); */
     text-shadow: rgb(0, 0, 0) 1px 0 3px;
     padding-bottom: 20px;
     padding-top: 20px;
@@ -422,8 +421,6 @@ hr {
 
 .footer-custom {
     box-shadow: 0px 0px 20px 0px #00000063;
-    margin-left: -5vw;
-    margin-right: -5vw;
 }
 
 .body-background-generic-blur {
@@ -447,6 +444,44 @@ hr {
     font-size: 20px;
     font-weight: 400;
     text-shadow: rgb(0, 0, 0) 1px 0 1px;
+    flex-direction: column;
+    text-align: center;
+}
+
+.line {
+    height: 7px;
+    border-radius: 7.5px;
+    background-color: #ff6000;
+    margin-bottom: 10px;
+}
+
+/* Responsive styles for large screens */
+@media (min-width: 576px) {
+    .line {
+        width: 30%;
+    }
+}
+
+/* Responsive styles for small screens */
+@media (max-width: 576px) {
+    .line {
+        width: 80%;
+    }
+}
+
+
+/* Responsive styles for large screens */
+@media (min-width: 576px) {
+    .slogan-image {
+        width: 20%;
+    }
+}
+
+/* Responsive styles for small screens */
+@media (max-width: 576px) {
+    .slogan-image {
+        width: 30%;
+    }
 }
 
 /* width */
