--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     padding-left: 20px;
     font-weight: 500;
     font-size: 16px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .nav-link.inactive {
@@ -48,6 +49,7 @@ body {
     margin-bottom: 5px;
     font-weight: 400;
     font-size: 16px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .nav-link.inactive:hover {
@@ -212,6 +214,7 @@ hr {
         transform: translateX(-50%) !important;
         position: relative;
     }
+
     .dropdown-menu-centered::before {
         content: "";
         position: absolute;
@@ -483,6 +486,55 @@ hr {
     .slogan-image {
         width: 30%;
     }
+}
+
+.mobile-button {
+    display: none;
+    /* Hide the button by default */
+}
+
+@media (max-width: 512px) {
+    .mobile-button {
+        /*Position*/
+        display: block;
+        position: fixed;
+        top: 50%;
+        left: 1%;
+        z-index: 9999;
+
+        /*Look*/
+        border: 3px solid rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        width: 38px;
+        height: 38px;
+        background-color: rgba(255, 255, 255, 0.5);
+        
+        color: rgba(255, 255, 255, 0.8);
+        font-weight: 1000;
+    }
+
+    .mobile-button.toggled {
+        background-color: rgba(255, 255, 255, 0.95);
+        border: 3px solid rgba(65, 65, 65, 0.26);
+        color: rgba(65, 65, 65, 0.26);
+        box-shadow: 0 0 80px rgba(0, 0, 0, 0.7);
+    }
+}
+
+.show-sidebar {
+    position: fixed !important;
+    width: 80% !important;
+    z-index: 999;
+    left: 11%;
+    top: 10%;
+    overflow: auto;
+    height: 85%;
+    box-shadow: 0 0 80px rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
+}
+
+.show-sidebar::-webkit-scrollbar {
+    width: 0;  /* Hide the scrollbar */
 }
 
 /* width */
