--- a/style.css
+++ b/style.css
@@ -507,7 +507,8 @@ hr {
         border-radius: 50%;
         width: 38px;
         height: 38px;
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(5px);
         
         color: rgba(255, 255, 255, 0.8);
         font-weight: 1000;
