--- a/style.css
+++ b/style.css
@@ -325,6 +325,10 @@ hr {
     background-color: rgb(251, 236, 255);
 }
 
+.rose {
+    background-color: rgb(255, 231, 253);
+}
+
 .sunflower {
     background-color: rgb(254, 255, 239);
 }
