add all menu items to get to docs and news item

--- a/style.css
+++ b/style.css
@@ -431,6 +431,10 @@ hr {
     background-color: rgb(255, 231, 253);
 }
 
+.lava {
+    background-color: rgb(255, 226, 226);
+}
+
 .sunflower {
     background-color: rgb(254, 255, 239);
 }
