--- a/style.css
+++ b/style.css
@@ -766,3 +766,55 @@ hr {
     background: #444;
 }
 
+.dropdown-submenu::after {
+    border-top: 0.5em solid #b8b8b8;
+    border-right: 0.4em solid transparent;
+    border-bottom: 0;
+    border-left: 0.4em solid transparent;
+    position: absolute;
+    right: 0.8em;  /* Adjust the positioning as needed */
+    top: 50%;
+    transform: translateY(-50%) rotate(-90deg);
+}
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    position: absolute;
+    top: 50%;
+    left: 105%;
+    transform: translateY(-50%);
+    margin-top: -1px;
+}
+
+.dropdown-submenu .dropdown-menu {
+    background-color: rgb(31, 35, 39);
+    position: absolute;
+    top: 50%;
+    left: 104%;
+    transform: translateY(-50%);
+    margin-top: -1px;
+}
+
+.submenu-overlay {
+    position: absolute;
+    top: 50%;
+    left: 95%;
+    width: 100px;
+    height: 100px;
+    transform: translateY(-50%);
+    margin-top: -1px;
+}
+
+.dropdown-submenu .dropdown-menu::before {
+    content: "";
+    position: absolute;
+    top: calc(50% - 4.3px);;
+    left: -4px;
+    transform: translateX(-50%) rotate(-90deg);
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent rgb(31, 35, 39) transparent;
+}
