--- a/style.css
+++ b/style.css
@@ -105,6 +105,17 @@ hr {
     backdrop-filter: blur(10px);
 }
 
+.faq-info {
+    padding-top: 10px;
+    padding-left: 18px;
+    padding-bottom: 10px;
+    padding-right: 45px;
+    margin-right: -5px;
+    font-size: 1.25rem;
+    font-weight: 350;
+    border-bottom-right-radius: 40px;
+}
+
 .warning {
     border: 1.5px solid rgba(0, 162, 255, 0.7);
     border-radius: 20px;
@@ -256,16 +267,12 @@ hr {
 }
 
 .news-card.expanded .news-info {
-    max-height: 280px;
+    max-height: 1000px;
 }
 
 .news-info-title {
     padding: 10px;
     font-weight: 500;
-}
-
-.news-info-details {
-
 }
 
 .news-info-details ul {
@@ -450,12 +457,6 @@ hr {
 
 .text-white-shadow {
     text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.5), 1px -1px 0 rgba(255, 255, 255, 0.5), -1px 1px 0 rgba(255, 255, 255, 0.5), 1px 1px 0 rgba(255, 255, 255, 0.5);
-}
-
-.card-header-custom {
-    /* background-color: rgba(56, 63, 69, 1);
-    
-    color: white; */
 }
 
 .blue {
@@ -917,4 +918,53 @@ hr {
     position: absolute;
     right: 1.8em;
     transform: translateY(-360%) rotate(-90deg);
+}
+
+.step-list {
+    counter-reset: step-counter;
+    list-style-type: none;
+    padding-left: 0;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.step-list li {
+    position: relative;
+    margin: 15px 0;
+    padding: 5px;
+    padding-left: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #f7f7f7;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.step-list li::before {
+    counter-increment: step-counter;
+    content: counter(step-counter);
+    position: absolute;
+    font-size: 15px;
+    top: 47%;
+    left: -30px;
+    transform: translateY(-50%);
+    background-color: rgb(255, 148, 25);
+    color: white;
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.code {
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 8px;
+    background-color: rgb(211, 211, 211);
+    font-weight: 500;
 }
